--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -52,6 +52,11 @@
     <div top-qa-nav></div>
 </div>
 <!--end of nav-->
+<!--start of bottom nav-->
+<div class="ng-cloak">
+    <div bottom-qa-nav></div>
+</div>
+<!--end of bottom nav-->
 
 
 <!--middle container-->
