--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -3,36 +3,19 @@
     display: none !important;
 }
 
-/*ng-animate transitions*/
-/*.animate.ng-enter,*/
-/*.animate.ng-leave {*/
-    /*-webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;*/
-    /*-moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;*/
-    /*-ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;*/
-    /*-o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;*/
-    /*transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;*/
-    /*position: relative;*/
-    /*display: block;*/
-/*}*/
-
-/*.animate.ng-leave.animate.ng-leave-active,*/
-/*.animate.ng-enter {*/
-    /*opacity: 1;*/
-    /*top: 0;*/
-    /*height: 30px;*/
-/*}*/
-
-/*.animate.ng-enter.ng-enter-active,*/
-/*.animate.ng-leave {*/
-    /*opacity: 0;*/
-    /*top: -50px;*/
-    /*height: 0px;*/
-/*}*/
-
 /*body*/
 body {
     padding-top: 70px;
     padding-bottom: 70px;
+    font-size: 12px;
+}
+
+.btn {
+    font-size: 10px;
+}
+
+.userName {
+    font-size: 12px;
 }
 
 /*
@@ -40,15 +23,17 @@ questions feed
 */
 .main-media {
     border-bottom: 1px solid #ccc;
+    padding-bottom: 5px;
     margin-bottom: 10px;
-}
-
-.media-body {
     width: 100%;
 }
 
-.upvote, .promote, .conv, .add {
-    margin-bottom: 2px;
+.media-body, .media-list {
+    width: 100%;
+}
+
+div.media-body > p > p {
+    margin-bottom: 5px;
 }
 
 .conv {
@@ -60,7 +45,7 @@ questions feed
     color: #0b97c4;
 }
 
-.questionTime, .commentTime {
+.questionTime, .commentTime, .senderName {
     color: darkgray;
     font-size: 10px;
 }
