--- a/public/partials/trending_summary.html
+++ b/public/partials/trending_summary.html
@@ -7,18 +7,20 @@
         </a>
     </h5>
     <ul class="list-group">
-        <li class="list-group-item ng-cloak animate"
+        <li class="list-group-item ng-cloak"
             ng-repeat="eachTop in topVotedQuestions"
             ng-class="[
                             questionReference[eachTop.questionIndex].questionClass,
                             questionReference[eachTop.questionIndex].listGroupClass
                             ]"
-            ng-disabled="questionReference[eachTop.questionIndex].ifDisabled"
-            ng-click="upvote(eachTop.questionIndex, $event)">
+            ng-disabled="questionReference[eachTop.questionIndex].ifDisabled">
                             <span class="badge voteNumber">
                                 {{eachTop.votes}}
                             </span>
-            {{eachTop.heading}}
+            <a ng-href="#/fullQuestion/{{eachTop.questionIndex}}">
+                <strong>{{eachTop.heading}}</strong>
+                <small class="senderName">by {{eachTop.senderName}}</small>
+            </a>
         </li>
     </ul>
 </div>
