--- a/views/loginNew.ejs
+++ b/views/loginNew.ejs
@@ -47,7 +47,7 @@
     <link rel="stylesheet" href="/public/css/login.css">
 
 
-    <title>HarvardClass - Login</title>
+    <title>HarvardClass - SandBox</title>
 </head>
 
 <body>
@@ -74,7 +74,6 @@
                 <li><a href="https://my.harvard.edu" target="_blank">my.harvard.edu</a></li>
                 <li><a href="https://canvas.harvard.edu/" target="_blank">Canvas</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="/loginNew.html">Help</a></li>
             </ul>
         </div>
     </div>
@@ -101,18 +100,63 @@
 </div>
 <!--end of jumbotron-->
 
-<!--start of login with Harvard ID-->
-<div class="container text-center">
-    <form action="/harvardId/login"
+<!--start of sandbox login form-->
+<div class="container">
+    <!--data-dv attributes for bootstrap validator plugin-->
+    <form action="/loginNew"
           method="post"
-          id="harvardIdLoginForm">
+          id="studentLoginForm"
+          data-bv-message="This value is not valid"
+          data-bv-feedbackicons-valid="glyphicon glyphicon-ok"
+          data-bv-feedbackicons-invalid="glyphicon glyphicon-remove"
+          data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
 
-        <input type="hidden" name="openid_identifier" value="https://id.cs50.net/"/>
+        <!--Username field-->
+        <div class="form-group">
+            <label for="customUsername">Username</label>
+            <input type="text"
+                   class="form-control"
+                   id="customUsername"
+                   placeholder="Enter your Username"
+                   name="username"
+                   data-bv-message="The username is not valid"
+                   data-bv-notempty="true"
+                   data-bv-notempty-message="The username is required and cannot be empty"
+                   data-bv-regexp="true"
+                   data-bv-regexp-regexp="^[a-zA-Z0-9_\.]+$"
+                   data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
+                   data-bv-stringlength="true"
+                   data-bv-stringlength-min="3"
+                   data-bv-stringlength-max="5"
+                   data-bv-stringlength-message="The custom username must be at least 3 and at most 5 characters long"/>
+        </div>
 
-        <button type="submit" class="btn btn-default btn-danger btn-lg" id="harvardID">Log in with Harvard PIN</button>
+        <!--password field-->
+        <div class="form-group">
+            <label for="classCode">Password</label>
+            <input type="password"
+                   class="form-control"
+                   id="classCode"
+                   placeholder="Password"
+                   name="password"
+                   data-bv-message="The password is not valid"
+                   data-bv-notempty="true"
+                   data-bv-notempty-message="The password is required and cannot be empty"
+                   data-bv-regexp="true"
+                   data-bv-regexp-regexp="^[a-zA-Z0-9_\.]+$"
+                   data-bv-regexp-message="The password can only consist of alphabetical, number, dot and underscore"
+                   data-bv-stringlength="true"
+                   data-bv-stringlength-min="3"
+                   data-bv-stringlength-max="5"
+                   data-bv-stringlength-message="The class code must be at least 3 and at most 5 characters long"/>
+        </div>
+
+        <div class="form-group">
+            <button type="submit" class="btn btn-default btn-block">Log In</button>
+        </div>
     </form>
 </div>
-<!--end of login with Harvard ID-->
+<!--end of sandbox login form-->
 
 
 <!--start of footer-->
@@ -185,18 +229,17 @@
 <script type="text/javascript"
         src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
-<!-- loads respondJS: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
+<!-- loads respond.js: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 
 <!-- loads jquery for bootstrapvalidator plugin -->
 <script type="text/javascript"
         src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.min.js"></script>
 
-<!-- custom login javascript file: should be loaded after jquery-->
+<!-- customlogin javascript file: should be loaded after jquery-->
 <script type="text/javascript" src="/public/js/login.js"></script>
 
 <!--modal validator plugin-->
 <script type="text/javascript" src="/public/js/custom_plugin.js"></script>
-
 </body>
 </html>
