temp host shift changes

--- a/views/loginNew.ejs
+++ b/views/loginNew.ejs
@@ -74,6 +74,7 @@
                 <li><a href="https://my.harvard.edu" target="_blank">my.harvard.edu</a></li>
                 <li><a href="https://canvas.harvard.edu/" target="_blank">Canvas</a></li>
                 <li><a href="#">About</a></li>
+                <li><a href="/login.html">Back to Harvard Login</a></li>
             </ul>
         </div>
     </div>
