--- a/public/partials/trending_summary.html
+++ b/public/partials/trending_summary.html
@@ -18,7 +18,7 @@
                                 {{eachTop.votes}}
                             </span>
             <a ng-href="#/fullQuestion/{{eachTop.questionIndex}}">
-                <strong>{{eachTop.heading}}</strong>
+                <strong class="text-outputs">{{eachTop.heading}}</strong>
                 <small class="senderName">by {{eachTop.senderName}}</small>
             </a>
         </li>
