--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -41,6 +41,10 @@
     <!--normalize.css-->
     <link rel="stylesheet" href="/bower_components/normalize.css/normalize.css"/>
 
+    <!-- bootstrap validator css -->
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/css/bootstrapValidator.min.css"/>
+
     <!-- loads custom css file -->
     <link rel="stylesheet" href="/public/css/chat.css">
 
@@ -142,5 +146,9 @@
 <script type="text/javascript" src="/public/angular_assets/qaApp/controllers/qCtrl.js"></script>
 <script type="text/javascript" src="/public/angular_assets/qaApp/controllers/onlineCtrl.js"></script>
 <script type="text/javascript" src="/public/angular_assets/qaApp/controllers/trendingCtrl.js"></script>
+
+<!-- loads jquery for bootstrapvalidator plugin -->
+<script type="text/javascript"
+        src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.min.js"></script>
 </body>
 </html>
