--- a/public/partials/comment_full.html
+++ b/public/partials/comment_full.html
@@ -1,27 +1,23 @@
-<ul class="media-list">
-    <li class="media main-media"
+<ul class="list-unstyled">
+    <li class="list-unstyled comment-full-li"
         ng-repeat="eachComment in comments"
         ng-class="cmntsReference[eachComment.commentIndex].commentClass">
-        <a class="media-left media-top"
-           href="#"
-           target="_self">
-            <p class="userName">{{eachComment.senderName}}</p>
-        </a>
 
-        <div class="media-body">
+        <p ta-bind
+           ng-model="eachComment.comment"
+           class="text-outputs comment-p">
+        </p>
+        <small class="comment-name">{{eachComment.senderName}}</small>
 
-            <p ta-bind ng-model="eachComment.comment"></p>
+        <small class="commentTime">{{cmntsReference[eachComment.commentIndex].commentTime}}</small>
 
-            <small class="commentTime">{{cmntsReference[eachComment.commentIndex].commentTime}}</small>
-
-            <div class="pull-right">
-                <a type="button"
-                   ng-class="cmntsReference[eachComment.commentIndex].buttonClass"
-                   ng-disabled="cmntsReference[eachComment.commentIndex].ifDisabled"
-                   ng-click="promote(currentQuestion, eachComment.commentIndex, eachComment.uniqueId, $event)">
-                    <i class="fa fa-angle-up"></i>
-                </a>
-            </div>
+        <div class="pull-right">
+            <a type="button"
+               ng-class="cmntsReference[eachComment.commentIndex].buttonClass"
+               ng-disabled="cmntsReference[eachComment.commentIndex].ifDisabled"
+               ng-click="promote(currentQuestion, eachComment.commentIndex, eachComment.uniqueId, $event)">
+                <i class="fa fa-angle-up"></i>
+            </a>
         </div>
     </li>
 </ul>
