--- a/public/partials/modals/question_input.html
+++ b/public/partials/modals/question_input.html
@@ -12,7 +12,12 @@
             </div>
 
             <div class="modal-body">
-                <form name="askForm">
+                <form name="askForm"
+                      id="question_input"
+                      data-bv-message="This value is not valid"
+                      data-bv-feedbackicons-valid="glyphicon glyphicon-ok"
+                      data-bv-feedbackicons-invalid="glyphicon glyphicon-remove"
+                      data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
                     <div class="form-group">
                         <label for="heading" class="hidden-xs">Heading</label>
                         <input class="form-control input-sm"
@@ -22,11 +27,21 @@
                                ng-model="theHeading"
                                required
                                ng-minlength="10"
-                               ng-maxlength="50">
+                               ng-maxlength="100"
+                               data-bv-message="The heading is not valid"
+                               data-bv-notempty="true"
+                               data-bv-notempty-message="The heading is required and cannot be empty"
+                               data-bv-regexp="true"
+                               data-bv-regexp-regexp="^[a-zA-Z0-9_\.]+$"
+                               data-bv-regexp-message="The heading can only consist of alphabetical, number, dot and underscore"
+                               data-bv-stringlength="true"
+                               data-bv-stringlength-min="10"
+                               data-bv-stringlength-max="100"
+                               data-bv-stringlength-message="The heading must be at least 10 and at most 100 characters long"/>
                     </div>
                     <div class="form-group">
                         <div text-angular
-                             ta-toolbar="[['pre','h6','bold','italics','underline','quote','ul','ol','undo','redo','indent','outdent']]"
+                             ta-toolbar="[['pre','h6','bold','italics','underline','insertLink','quote','ul','ol','undo','redo','indent','outdent']]"
                              ng-model="theQuestion"
                              required
                              placeholder="Your question here"></div>
