--- a/public/partials/views/trending.html
+++ b/public/partials/views/trending.html
@@ -1,49 +1,42 @@
 <div ng-controller="TrendingCtrl"
      ng-class="columnClass">
     <h5 id="trending"><i class="fa fa-line-chart"></i> Trending</h5>
+
     <ul class="list-group">
         <li class="list-group-item ng-cloak"
             ng-repeat="eachTop in topVotedQuestions"
             ng-class="[questionReference[eachTop.questionIndex].questionClass]"
             ng-disabled="questionReference[eachTop.questionIndex].ifDisabled">
-                            <span class="badge voteNumber">
-                                {{eachTop.votes}}
-                            </span>
-            <h4>
+            <span class="badge voteNumber">{{eachTop.votes}}</span>
+            <h4 class="text-outputs">
                 <a ng-href="#/fullQuestion/{{eachTop.questionIndex}}">
                     {{eachTop.heading}}
-                    <small class="senderName">by {{eachTop.senderName}}</small>
                 </a>
+                <small class="senderName">by {{eachTop.senderName}}</small>
             </h4>
 
-            <div class="media"
-                 ng-class="questionReference[eachTop.questionIndex].questionClass">
+            <p ta-bind
+               ng-model="eachTop.question"
+               class="text-outputs">
+            </p>
 
-                <div class="media-body">
+            <small class="questionTime">
+                {{questionReference[eachTop.questionIndex].questionTime}}
+            </small>
 
-                    <p ta-bind ng-model="eachTop.question"></p>
-                </div>
+            <div class="pull-right">
+                <a ng-href="#/fullQuestion/{{eachTop.questionIndex}}"
+                   type="button"
+                   class="btn btn-default btn-xs conv">
+                    <i class="fa fa-comments-o"></i>
+                </a>
+                <button type='button'
+                        ng-class="questionReference[eachTop.questionIndex].buttonClass"
+                        ng-disabled="questionReference[eachTop.questionIndex].ifDisabled"
+                        ng-click="upvote(eachTop.questionIndex, $event)">
 
-                <small class="questionTime">
-                    {{questionReference[eachTop.questionIndex].questionTime}}
-                </small>
-
-                <div class="pull-right">
-                    <a ng-href="#/fullQuestion/{{eachTop.questionIndex}}"
-                       type="button"
-                       class="btn btn-default btn-xs conv">
-                        <i class="fa fa-comments-o"></i>
-                    </a>
-                    <button type='button'
-                            ng-class="questionReference[eachTop.questionIndex].buttonClass"
-                            ng-disabled="questionReference[eachTop.questionIndex].ifDisabled"
-                            ng-click="upvote(eachTop.questionIndex, $event)">
-
-                        <span class='glyphicon glyphicon-thumbs-up' aria-hidden='true'></span>
-
-                    </button>
-                </div>
-
+                    <span class='glyphicon glyphicon-thumbs-up' aria-hidden='true'></span>
+                </button>
             </div>
         </li>
     </ul>
