Added ability to edit questions. Now in Beta

--- a/public/partials/comment_full.html
+++ b/public/partials/comment_full.html
@@ -1,5 +1,5 @@
 <ul class="list-unstyled">
-    <li class="list-unstyled comment-full-li"
+    <li class="list-unstyled comment-full-li clearfix"
         ng-repeat="eachComment in comments"
         ng-class="cmntsReference[eachComment.commentIndex].commentClass">
 
