--- a/public/partials/questionFeed.html
+++ b/public/partials/questionFeed.html
@@ -18,7 +18,7 @@
     </h5>
 
     <ul class="list-unstyled">
-        <li class="list-unstyled question-feed-li"
+        <li class="list-unstyled clearfix question-feed-li"
             ng-repeat="eachQuestion in questions"
             ng-class="questionReference[eachQuestion.questionIndex].questionClass">
 
