--- a/public/partials/modals/question_edit.html
+++ b/public/partials/modals/question_edit.html
@@ -1,44 +1,55 @@
 <li>
     <div class="edit_input">
         <form name="editForm"
-              id="edit_input"
-              data-bv-message="This value is not valid"
-              data-bv-feedbackicons-valid="glyphicon glyphicon-ok"
-              data-bv-feedbackicons-invalid="glyphicon glyphicon-remove"
-              data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
-            <div class="form-group">
+              id="edit_input">
+            <div class="form-group"
+                 ng-class="{
+                         'has-error': (editForm.qheading.$error.required && editForm.qheading.$dirty) ||
+                         (editForm.qheading.$error.minlength && editForm.qheading.$dirty) ||
+                         editForm.qheading.$error.maxlength,
+                         'has-success': !editForm.qheading.$invalid
+                         }">
                 <label for="heading" class="hidden-xs">Heading</label>
                 <input class="form-control input-sm"
                        id="heading"
+                       name="qheading"
                        type="text"
                        ng-model="theEditedHeading"
                        required
                        ng-minlength="10"
-                       ng-maxlength="100"
-                       data-bv-message="The heading is not valid"
-                       data-bv-notempty="true"
-                       data-bv-notempty-message="The heading is required and cannot be empty"
-                       data-bv-regexp="true"
-                       data-bv-regexp-regexp="^[a-zA-Z0-9_\.]+$"
-                       data-bv-regexp-message="The heading can only consist of alphabetical, number, dot and underscore"
-                       data-bv-stringlength="true"
-                       data-bv-stringlength-min="10"
-                       data-bv-stringlength-max="100"
-                       data-bv-stringlength-message="The heading must be at least 10 and at most 100 characters long"/>
+                       ng-maxlength="100"/>
+
+                <p ng-show="editForm.qheading.$error.required && askForm.qheading.$dirty"
+                   class="form-error-notice">This field is
+                    required</p>
+
+                <p ng-show="editForm.qheading.$error.minlength && askForm.qheading.$dirty"
+                   class="form-error-notice">At least 10
+                    characters</p>
+
+                <p ng-show="editForm.qheading.$error.maxlength"
+                   class="form-error-notice">At most 100 characters</p>
             </div>
-            <div class="form-group">
+            <div class="form-group"
+                 ng-class="{
+                 'has-error': editForm.qQuestion.$error.required,
+                 'has-success': !editForm.qQuestion.$invalid
+                 }">
                 <div text-angular
                      ta-toolbar="[['pre','h6','bold','italics','underline','insertLink','quote','ul','ol','undo','redo','indent','outdent']]"
+                     name="qQuestion"
                      ng-model="theEditedQuestion"
                      required>
                 </div>
+                <p ng-show="editForm.qQuestion.$error.required && editForm.qQuestion.$dirty"
+                   class="form-error-notice">This field is required</p>
             </div>
 
             <div class="form-group clearfix">
                 <button type="button"
                         class="btn btn-primary btn-xs pull-right"
                         ng-click="saveEditedPost(theEditedHeading, theEditedQuestion)"
-                        ng-disabled="askForm.$invalid">
+                        ng-disabled="editForm.$invalid">
                     <i class="fa fa-paper-plane"></i> Save
                 </button>
                 <button type="button"
