--- a/public/partials/modals/question_input.html
+++ b/public/partials/modals/question_input.html
@@ -1,61 +1,83 @@
 <div id="myModal"
      class="modal fade"
      modal-question-input
-     tabindex="-1" role="dialog"
+     tabindex="-1"
+     role="dialog"
      aria-labelledby="myModalLabel"
      aria-hidden="true"
      ng-controller="AskController">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header hidden-xs">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel">Ask a new question</h3>
+                <button type="button"
+                        class="close"
+                        data-dismiss="modal"
+                        aria-hidden="true">×
+                </button>
+                <h5 id="myModalLabel">New question</h5>
+
+                <p class="question-modal-notice">Please ask questions, or make posts that contain useful information.
+                    Thank you</p>
             </div>
 
             <div class="modal-body">
                 <form name="askForm"
-                      id="question_input"
-                      data-bv-message="This value is not valid"
-                      data-bv-feedbackicons-valid="glyphicon glyphicon-ok"
-                      data-bv-feedbackicons-invalid="glyphicon glyphicon-remove"
-                      data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
-                    <div class="form-group">
+                      id="question_input">
+                    <div class="form-group"
+                         ng-class="{
+                         'has-error': askForm.qheading.$error.required ||
+                         (askForm.qheading.$error.minlength && askForm.qheading.$dirty) ||
+                         askForm.qheading.$error.maxlength,
+                         'has-success': !askForm.qheading.$invalid
+                         }">
                         <label for="heading" class="hidden-xs">Heading</label>
                         <input class="form-control input-sm"
                                id="heading"
-                               placeholder="Brief heading (10 to 50 chars)"
+                               aria-describedby="headingStatus"
+                               name="qheading"
+                               placeholder="Brief heading (10 to 100 chars)"
                                type="text"
                                ng-model="theHeading"
                                required
                                ng-minlength="10"
-                               ng-maxlength="100"
-                               data-bv-message="The heading is not valid"
-                               data-bv-notempty="true"
-                               data-bv-notempty-message="The heading is required and cannot be empty"
-                               data-bv-regexp="true"
-                               data-bv-regexp-regexp="^[a-zA-Z0-9_\.]+$"
-                               data-bv-regexp-message="The heading can only consist of alphabetical, number, dot and underscore"
-                               data-bv-stringlength="true"
-                               data-bv-stringlength-min="10"
-                               data-bv-stringlength-max="100"
-                               data-bv-stringlength-message="The heading must be at least 10 and at most 100 characters long"/>
+                               ng-maxlength="100"/>
+
+                        <p ng-show="askForm.qheading.$error.required && askForm.qheading.$dirty"
+                           class="form-error-notice">A heading is required</p>
+
+                        <p ng-show="askForm.qheading.$error.minlength && askForm.qheading.$dirty"
+                           class="form-error-notice">At least 10
+                            characters</p>
+
+                        <p ng-show="askForm.qheading.$error.maxlength"
+                           class="form-error-notice">At most 100 characters</p>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group"
+                         ng-class="{
+                         'has-error': askForm.qQuestion.$error.required,
+                         'has-success': !askForm.qQuestion.$invalid
+                         }">
                         <div text-angular
                              ta-toolbar="[['pre','h6','bold','italics','underline','insertLink','quote','ul','ol','undo','redo','indent','outdent']]"
+                             name="qQuestion"
                              ng-model="theQuestion"
                              required
-                             placeholder="Your question here"></div>
+                             placeholder="Your question here">
+                        </div>
+                        <p ng-show="askForm.qQuestion.$error.required && askForm.qQuestion.$dirty"
+                           class="form-error-notice">This field is required</p>
                     </div>
+
+                    <button class="btn" ng-click="dismiss()">Close</button>
+                    <button type="submit"
+                            class="btn btn-warning pull-right"
+                            ng-click="ask()"
+                            ng-disabled="askForm.$invalid"
+                            data-dismiss="modal">ASK
+                    </button>
+
                 </form>
 
-                <button class="btn" ng-click="dismiss()">Close</button>
-                <button type="submit"
-                        class="btn btn-warning pull-right"
-                        ng-click="ask()"
-                        ng-disabled="askForm.$invalid"
-                        data-dismiss="modal">ASK
-                </button>
             </div>
         </div>
     </div>
