Removed html5 validation on questioninput and question edit

--- a/public/partials/modals/question_edit.html
+++ b/public/partials/modals/question_edit.html
@@ -1,7 +1,8 @@
 <li>
     <div class="edit_input">
         <form name="editForm"
-              id="edit_input">
+              id="edit_input"
+              novalidate="novalidate">
             <div class="form-group"
                  ng-class="{
                          'has-error': (editForm.qheading.$error.required && editForm.qheading.$dirty) ||
