--- a/public/partials/modals/question_input.html
+++ b/public/partials/modals/question_input.html
@@ -22,7 +22,8 @@
 
             <div class="modal-body">
                 <form name="askForm"
-                      id="question_input">
+                      id="question_input"
+                      novalidate="novalidate">
                     <div class="form-group"
                          ng-class="{
                          'has-error': askForm.qheading.$error.required ||
