--- a/public/partials/modals/question_edit.html
+++ b/public/partials/modals/question_edit.html
@@ -32,16 +32,16 @@
             </div>
             <div class="form-group"
                  ng-class="{
-                 'has-error': editForm.qQuestion.$error.required,
-                 'has-success': !editForm.qQuestion.$invalid
+                 'has-error': editForm.qEdit.$error.required,
+                 'has-success': !editForm.qEdit.$invalid
                  }">
                 <div text-angular
                      ta-toolbar="[['pre','h6','bold','italics','underline','insertLink','quote','ul','ol','undo','redo','indent','outdent']]"
-                     name="qQuestion"
+                     name="qEdit"
                      ng-model="theEditedQuestion"
                      required>
                 </div>
-                <p ng-show="editForm.qQuestion.$error.required && editForm.qQuestion.$dirty"
+                <p ng-show="editForm.qEdit.$error.required && editForm.qEdit.$dirty"
                    class="form-error-notice">This field is required</p>
             </div>
 
