Fixed line appearing beneath question_full bug, plus changed error rout to error500.html

--- a/public/partials/comment_full.html
+++ b/public/partials/comment_full.html
@@ -1,6 +1,7 @@
 <ul class="list-unstyled">
     <li class="list-unstyled comment-full-li clearfix"
         ng-repeat="eachComment in comments"
+        ng-if="cmntsReference[eachComment.commentIndex]"
         ng-class="cmntsReference[eachComment.commentIndex].commentClass">
 
         <div ng-if="cmntsReference[eachComment.commentIndex].viewMode == 'viewMode'">
